--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@
 behave == 1.2.5		# BDD framework
 coverage == 3.7.1	# Python code coverage 
 nose == 1.3.6		# Test runner
-pexpect			# Pexpect allows easy control of interactive console applications
+pexpect			# Pexpect allows easier control of interactive console applications
