--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 ### Dependencies ###
-behave >= 1.2.5		# BDD framework
-coverage >= 3.7.1	# Python code coverage
-nose >= 1.3.6		# Test runner
-pexpect			# Pexpect allows easier control of interactive console applications
+behave >= 1.2.5     # BDD framework
+coverage >= 3.7.1   # Python code coverage
+nose >= 1.3.6       # Test runner
+pexpect             # Pexpect allows easier control of interactive console applications
+selenium            # Selenium WebDriver
+phantomjs           # Headless Browser
